--- a/package.json
+++ b/package.json
@@ -3,14 +3,13 @@
   "private": true,
   "dependencies": {
     "@babel/preset-typescript": "^7.10.4",
+    "@hotwired/turbo-rails": "^7.0.0-beta.1",
     "@rails/actioncable": "^6.0.0",
     "@rails/actiontext": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
-    "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.1.1",
     "tailwindcss": "^1.8.10",
     "trix": "^1.3.1",
-    "turbolinks": "^5.2.0",
     "typescript": "^4.0.3"
   },
   "version": "0.1.0",
