--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "name": "constraint_validation_example",
   "private": true,
   "dependencies": {
+    "@babel/preset-typescript": "^7.10.4",
     "@rails/actioncable": "^6.0.0",
     "@rails/actiontext": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.1.1",
     "trix": "^1.3.1",
-    "turbolinks": "^5.2.0"
+    "turbolinks": "^5.2.0",
+    "typescript": "^4.0.3"
   },
   "version": "0.1.0",
   "devDependencies": {
